--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap");
 
 body {
   margin: 0px;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 16px;
+}
+
+.notify,
+.notify-error {
+  margin-left: 10%;
+  width: 80%;
+  padding: 2px 5px;
+}
+
+.notify {
+  color: green;
+  box-shadow: 0px 0px 10px green;
+}
+
+.notify-error {
+  color: tomato;
+  box-shadow: 0px 0px 10px red;
 }
